--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <!-- BANNER -->
     <div class="banner">
-        Nhóm 5 – Trang Web Chính Thức
+        Nhóm 5
     </div>
 
     <h1 id="members">Các thành viên của nhóm</h1>
