--- a/index.html
+++ b/index.html
@@ -262,6 +262,14 @@
             <li><a>Bài 8: Định dạng văn bản</a></li>
             <li><a>Bài 9: Tạo danh sách, bảng</a></li>
             <li><a>Bài 10: Tạo liên kết</a></li>
+            <li><a>Bài 11: Chèn tệp tin đa phương tiện và khung nội tuyến vào trang web</a></li>
+            <li><a>Bài 12: Tạo biểu mẫu</a></li>
+            <li><a>Bài 13: Khái niệm, vai trò của CSS</a></li>
+            <li><a>Bài 14: Định dạng văn bản bằng CSS</a></li>
+            <li><a>Bài 15: Tạo màu cho chữ và nền</a></li>
+            <li><a>Bài 16: Định dạng khung</a></li>
+            <li><a>Bài 17: Các mức ưu tiên của bộ chọn</a></li>
+            <li><a>Bài 18: Thực hành tổng hợp thiết kế trang web</a></li>
         </ul>
     </section>
 
