--- a/index.html
+++ b/index.html
@@ -250,28 +250,33 @@
 
     <!-- BÀI HỌC -->
     <section class="lessons" id="lessons">
-        <h2>Danh sách Bài Học</h2>
+    <h2>Danh sách Bài Học</h2>
 
-        <ul class="lesson-list">
-            <li><a href="https://www.canva.com/design/DAG1lItBaPM/x443j1maq3FFFfSX_jxMvw/edit?utm_source=sharebutton">Bài 1 + 2: Làm quen với trí tuệ nhân tạo</a></li>
-            <li><a>Bài 3: Một số thiết bị mạng thông dụng</a></li>
-            <li><a href="https://www.canva.com/design/DAGzzzrEmJ4/CLsNfeL7fr05u5kddoBdMg/edit?utm_source=sharebutton">Bài 4: Giao thức mạng</a></li>
-            <li><a>Bài 5: Thực hành chia sẻ tài nguyên</a></li>
-            <li><a href="https://www.canva.com/design/DAG2fE9kO9E/view?utm_source=sharebutton">Bài 6: Giao tiếp và ứng xử trong không gian mạng</a></li>
-            <li><a>Bài 7: HTML và cấu trúc trang web</a></li>
-            <li><a>Bài 8: Định dạng văn bản</a></li>
-            <li><a>Bài 9: Tạo danh sách, bảng</a></li>
-            <li><a>Bài 10: Tạo liên kết</a></li>
-            <li><a>Bài 11: Chèn tệp tin đa phương tiện và khung nội tuyến vào trang web</a></li>
-            <li><a>Bài 12: Tạo biểu mẫu</a></li>
-            <li><a>Bài 13: Khái niệm, vai trò của CSS</a></li>
-            <li><a>Bài 14: Định dạng văn bản bằng CSS</a></li>
-            <li><a>Bài 15: Tạo màu cho chữ và nền</a></li>
-            <li><a>Bài 16: Định dạng khung</a></li>
-            <li><a>Bài 17: Các mức ưu tiên của bộ chọn</a></li>
-            <li><a>Bài 18: Thực hành tổng hợp thiết kế trang web</a></li>
-        </ul>
-    </section>
+    <ul class="lesson-list">
+        <li><a href="https://www.canva.com/design/DAG1lItBaPM/x443j1maq3FFFfSX_jxMvw/edit?utm_source=sharebutton">Bài 1 + 2: Làm quen với trí tuệ nhân tạo</a></li>
+        <li><a>Bài 3: Một số thiết bị mạng thông dụng</a></li>
+        <li><a href="https://www.canva.com/design/DAGzzzrEmJ4/CLsNfeL7fr05u5kddoBdMg/edit?utm_source=sharebutton">Bài 4: Giao thức mạng</a></li>
+        <li><a>Bài 5: Thực hành chia sẻ tài nguyên</a></li>
+        <li><a href="https://www.canva.com/design/DAG2fE9kO9E/view?utm_source=sharebutton">Bài 6: Giao tiếp và ứng xử trong không gian mạng</a></li>
+        <li><a>Bài 7: HTML và cấu trúc trang web</a></li>
+
+        <!-- 🔥 NHỮNG BÀI BẠN ĐÃ TẠO FILE HTML -->
+        <li><a href="bai8.html">Bài 8: Định dạng văn bản</a></li>
+        <li><a href="bai9.html">Bài 9: Tạo danh sách, bảng</a></li>
+        <li><a href="bai10.html">Bài 10: Tạo liên kết</a></li>
+        <li><a href="bai11.html">Bài 11: Chèn tệp đa phương tiện</a></li>
+        <li><a href="bai12.html">Bài 12: Tạo biểu mẫu</a></li>
+        <li><a href="bai13.html">Bài 13: Khái niệm, vai trò của CSS</a></li>
+        <li><a href="bai14.html">Bài 14: Định dạng văn bản bằng CSS</a></li>
+        <li><a href="bai15.html">Bài 15: Tạo màu cho chữ và nền</a></li>
+
+        <!-- bạn không nhắc bài 16-17 nên mình giữ nguyên -->
+        <li><a>Bài 16: Định dạng khung</a></li>
+        <li><a>Bài 17: Các mức ưu tiên của bộ chọn</a></li>
+
+        <li><a href="bai18.html">Bài 18: Thực hành tổng hợp thiết kế trang web</a></li>
+    </ul>
+</section>
 
     <!-- FOOTER -->
     <footer>
@@ -293,3 +298,4 @@
 
 </body>
 </html>
+
